# polymarket-mcp

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  server.json
.cursor/rules/: dev-workflow.mdc  mcp-tool-patterns.mdc  project-overview.mdc  python-conventions.mdc
docs/: PROJECT_KNOWLEDGE_BASE.md
src/polymarket_mcp/: config.py  prompts.py  resources.py  server.py  types.py
src/polymarket_mcp/content/: __init__.py  categories.md  glossary.md  tool-guide.md
src/polymarket_mcp/tools/: __init__.py  markets.py  users.py
src/polymarket_mcp/utils/: formatters.py  helpers.py
tests/: test_config.py  test_formatters.py  test_helpers.py  test_server.py
